Addresed review comments - alignment issues and export button issue

--- a/src/assets/scss/_record.scss
+++ b/src/assets/scss/_record.scss
@@ -43,6 +43,11 @@
               font-size: 1rem;
               padding-top: 7px;
               width: 330px;
+
+              // overriding the title-button class
+              & > * {
+                display: inline-flex;
+              }
             }
           }
 
