--- a/src/assets/scss/_recordset-table.scss
+++ b/src/assets/scss/_recordset-table.scss
@@ -157,10 +157,11 @@
     }
   }
 
+  // Changing the padding for the action button to align with the rest of the columns in the table
   .action-btns {
     text-align: center;
     font-size: 1.2rem;
-    padding: 5px 0 0 0;
+    padding: 3px 0 0 0;
     .chaise-btn {
       padding: 0;
       margin: -3px;
@@ -168,8 +169,9 @@
       min-height: 25px; // make sure the button has default height
     }
 
+    // reducing the font-size to make the alignment of view-details better with other action buttons
     .chaise-view-details {
-      font-size: 1.1em;
+      font-size: 1em;
     }
 
     .disabled {
